@@ -299,6 +299,49 @@
 													[row]
 
 														[column]
+															grow_factor = 1
+															horizontal_grow = "true"
+
+															[grid]
+
+																[row]
+
+																	[column]
+																		border = "all"
+																		border_size = 5
+
+																		[label]
+																			id = "input_caption"
+																			definition = "default"
+																		[/label]
+																		
+																	[/column]
+
+																	[column]
+																		grow_factor = 1
+																		horizontal_grow = "true"
+
+																		border = "all"
+																		border_size = 5
+
+																		[text_box]
+																			id = "input"
+																			definition = "default"
+																		[/text_box]
+
+																	[/column]
+
+																[/row]
+
+															[/grid]
+
+														[/column]
+
+													[/row]
+
+													[row]
+
+														[column]
 															border = "all"
 															border_size = 5
 															horizontal_alignment = "center"
@@ -419,6 +462,49 @@
 																id = "label"
 																definition = "default"
 															[/scroll_label]
+
+														[/column]
+
+													[/row]
+
+													[row]
+
+														[column]
+															grow_factor = 1
+															horizontal_grow = "true"
+
+															[grid]
+
+																[row]
+
+																	[column]
+																		border = "all"
+																		border_size = 5
+
+																		[label]
+																			id = "input_caption"
+																			definition = "default"
+																		[/label]
+																		
+																	[/column]
+
+																	[column]
+																		grow_factor = 1
+																		horizontal_grow = "true"
+
+																		border = "all"
+																		border_size = 5
+
+																		[text_box]
+																			id = "input"
+																			definition = "default"
+																		[/text_box]
+
+																	[/column]
+
+																[/row]
+
+															[/grid]
 
 														[/column]
 
