@@ -8,6 +8,7 @@ Version 1.5.8+svn:
  * User interface:
    * Hide the "Network Player" option for Local MP Games (bug #12596).
    * Potraits with an icon are TC'ed again.
+   * Dialogs with an input text are converted to the new dialogs.
  * WML Engine:
    * Prevent duplicate id conflicts when cloning units with WML (bug #12894)
    * [time_area], in EventWML, can now accept comma-separated lists of area ids
